--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" media="screen and (max-width:1024px)" href="/mobile.css">
 </head>
 <body>
-    
+    <header>
+        <div id="navbar">
+            <h1>My Collections</h1>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a class="current" href="/gallery.html">Gallery</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </div>
+</header>
+    <main>
+        <section id="section-2">
+            <h1>Books</h1>
+            <div>
+                <img src="/images/happy.jpg" alt="book Happy">
+                <h3><a href="https://www.amazon.com/Happy-More-Less-Everything-Absolutely-ebook/dp/B01HE7TG7Y" target="_blank">Happy</a></h3>
+                <p>'Really brilliant and just crammed with wisdom and insight. It will genuinely make a difference to me and the way I think about myself.' Stephen Fry</p>
+            </div>
+            <div>
+                <img src="/images/hitchhiker.jpg" alt="Hitchhiker's Guide To The Galaxy book">
+                <h3><a href="https://www.amazon.com/Hitchhikers-Guide-Galaxy-Douglas-Adams-ebook/dp/B000XUBC2C/ref=sr_1_1?crid=816INS76NVO4&dchild=1&keywords=hitchhikers+guide+to+the+galaxy&qid=1611461001&s=digital-text&sprefix=hitch%2Cdigital-text%2C215&sr=1-1" target="_blank">The Hitchhiker's Guide</a></h3>
+                <p>“A whimsical oddyssey . . . Characters frolic through the galaxy with infectious joy.”—Publishers Weekly</p>
+            </div>
+            <div>
+                <img src="/images/warpeace.jpg" alt="War and Peace">
+                <h3><a href="https://www.amazon.com/War-Peace-Leo-Tolstoy-ebook/dp/B07MGHPFBJ/ref=sr_1_1?dchild=1&keywords=war+and+peace&qid=1611461040&s=digital-text&sr=1-1" target="_blank">War and Peace</a></h3>
+                <p>Often called the greatest novel ever written, War and Peace is at once an epic of the Napoleonic wars, a philosophical study, and a celebration of the Russian spirit.</p>
+            </div>
+            <div>
+                <img src="/images/musashi.jpg" alt="Musashi">
+                <h3><a href="https://www.amazon.com/Musashi-Epic-Novel-Samurai-Era-ebook/dp/B00CD428BU/ref=sr_1_1?dchild=1&keywords=musashi&qid=1611461098&s=digital-text&sr=1-1" target="_blank">Musashi</a></h3>
+                <p>The classic samurai novel about the real exploits of the most famous swordsman.</p>
+            </div>
+        </section>       
+        <section id="section-2">
+            <h1>Series</h1>
+            <div>
+                <img src="/images/bigbang.jpeg" alt="Bing Bang Theory">
+                <h3><a href="https://www.amazon.com/Big-Bang-Theory-Season/dp/B000W91RUG" target="_blank">The Big Bang Theory</a></h3>
+                <p>A woman who moves into an apartment across the hall from two brilliant but socially awkward physicists shows them how little they know about life outside of the laboratory.</p>
+            </div>
+            <div>
+                <img src="/images/silicon.jpeg" alt="Silicon Valley">
+                <h3><a href="https://www.amazon.com/Minimum-Viable-Product/dp/B00M4ZPZPY/ref=sr_1_1?crid=SH7P0GW1APT1&dchild=1&keywords=silicon+valley&qid=1611461219&s=movies-tv&sprefix=silicon+%2Cmovies-tv%2C191&sr=1-1" target="_blank">Silicon Valley</a></h3>
+                <p>The series, a parody of Silicon Valley culture, focuses on Richard Hendricks (Thomas Middleditch), a programmer who founds a startup company called Pied Piper, and chronicles his struggles trying to maintain his company while facing competition from larger entities.</p>
+            </div>
+            <div>
+                <img src="/images/chuck.jpg" alt="Chuck">
+                <h3><a href="https://www.amazon.com/Pilot/dp/B000VUA2MK/ref=sr_1_1?dchild=1&keywords=chuck&qid=1611461266&s=instant-video&sr=1-1" target="_blank">Chuck</a></h3>
+                <p>An average twenty-eight-year-old man who gains the ability to use the full extent of his brain's capabilities is hired by the F.B.I. as a consultant.</p>
+            </div>
+            <div>
+                <img src="/images/limitless.jpg" alt="view of a city">
+                <h3><a href="https://www.amazon.com/Pilot/dp/B014CRR2TI/ref=sr_1_2?dchild=1&keywords=limitless&qid=1611461305&s=instant-video&sr=1-2" target="_blank">Limitless</a></h3>
+                <p>Based on the feature film of the same name, `Limitless' follows Brian Finch, who, possessed of extraordinary cognitive powers thanks to the mysterious drug NZT, works with the FBI to help solve complex cases.</p>
+            </div>
+        </section>               
+        <section id="section-2">
+            <h1>Music</h1>
+            <div>
+                <img src="/images/pink.jpg" alt="Pink FLoyd album">
+                <h3><a href="https://www.youtube.com/watch?v=hjpF8ukSrvk" target="_blank">Pink Floyd</a></h3>
+                <p>Progressive rock, experimental rock.</p>
+            </div>
+            <div>
+                <img src="/images/hilary.jpg" alt="Hilary Hahn">
+                <h3><a href="https://www.youtube.com/watch?v=iEBX_ouEw1I" target="_blank">Hilary Hahn</a></h3>
+                <p>Three-time Grammy Award-winning violin soloist.</p>
+            </div>
+            <div>
+                <img src="/images/Rodrigo-y-Gabrielajpg.jpg" alt="Rodrigo and Gabriela">
+                <h3><a href="https://www.youtube.com/watch?v=ENBX_v1Po1Y" target="_blank">Rodrigo Y Gabriela</a></h3>
+                <p>Rodrigo y Gabriela are a Mexican acoustic guitar duo whose music is influenced by a number of genres including nuevo flamenco, rock, and heavy metal.</p>
+            </div>
+            <div>
+                <img src="/images/gotan.jpg" alt="Gotan Project album">
+                <h3><a href="https://www.youtube.com/watch?v=AJBBY2hJaps" target="_blank">Gotan Project</a></h3>
+                <p>Neotango, electronica, tango</p>
+            </div>
+        </section>                       
+    </main>
 </body>
 </html>
