--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a Bio assignment">
+    <meta name="keywords" content="biography, hobbies, collections">
     <title>Bio Page</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" media="screen and (max-width:1024px)" href="/mobile.css">
 </head>
 <body>
-    
+    <header>
+            <div id="navbar">
+                <h1>Irina Markov</h1>
+                <ul>
+                    <li><a class="current" href="/index.html">Home</a></li>
+                    <li><a href="/gallery.html">Gallery</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                </ul>
+            </div>
+    </header>
+    <main>
+        <section id="section-1">
+            <div>
+                <img src="/images/kayak.jpg" alt="picture of me kayaking" class="img1">
+                <img src="/images/choco.jpg" alt="picture of me eating chocolate" class="img2">
+            </div>
+            <div class="about">
+                <h2>About me</h2>
+                <p>Two most important things to know about me are I like camping, hiking, traveling and I love dark chocolate. This is me kayaking on Crescent Lake, Olympic National Park, and eating chocolate desert at Choco factory in Puerto Vallarta.</p>
+            </div>
+        </section>
+        <section id="section-2">
+            <h1>My Hobbies</h1>
+            <div>
+                <img src="/images/yoga1.jpg" alt="yoga pose">
+                <h3><a href="https://www.gaia.com/yoga/practices" target="_blank">Yoga</a></h3>
+                <p>I practice Hatha, Vinyasa, Yin, Ashtanga and Iyengar yoga styles.</p>
+            </div>
+            <div>
+                <img src="/images/meditation.jpg" alt="person meditating">
+                <h3><a href="https://www.gaia.com/style/yoga-meditation?render=plangrid-v5" target="_blank">Meditation</a></h3>
+                <p>Zen meditation: observation of breath and quiet awareness.</p>
+            </div>
+            <div>
+                <img src="/images/dogpals.PNG" alt="Dog Park Pals website">
+                <h3><a href="https://teksystems.tahoe.appsembler.com/" target="_blank">Coding</a></h3>
+                <p>Group project: Dog Park Pals, a social network website to enable dogs to meet up at their favorite dog parks.</p>
+            </div>
+            <div>
+                <img src="/images/hiking.jpg" alt="Cape flattery">
+                <h3><a href="https://www.google.com/maps/place/Cape+Flattery/@48.383116,-124.7319205,14z/data=!3m1!4b1!4m5!3m4!1s0x548eb8fbd67c3671:0x90c8a7cba1890a00!8m2!3d48.3831179!4d-124.7144109" target="_blank">Hiking</a></h3>
+                <p>This is me and my husband at the most NorthWest point of the mainland United States, Cape Flattery</p>
+            </div>
+        </section>
+    </main>          
 </body>
 </html>
