changed form in contact page for Netlify form submission

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     </header>
     <section id="contact">
         <h2>Contact me</h2>
-            <form action="#">
+            <form name="contact" method="POST" data-netlify="true">
                 <div>
                     <input type="text" id="name" name="name" placeholder="Name">
                 </div>
